--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -6,6 +6,7 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
+    "migrate": "tsx src/db/migrate.ts",
     "lint": "eslint . --ext .ts",
     "test": "echo \"No tests yet\""
   },
