--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -6,6 +6,7 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
+    "migrate": "tsx src/db/migrate.ts",
     "lint": "eslint . --ext .ts",
     "test": "echo \"No tests yet\""
   },
@@ -18,7 +19,8 @@
     "pg": "^8.11.3",
     "sequelize": "^6.35.2",
     "bull": "^4.11.5",
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
