--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -8,7 +8,8 @@
     "start": "node dist/server.js",
     "migrate": "tsx src/db/migrate.ts",
     "lint": "eslint . --ext .ts",
-    "test": "echo \"No tests yet\""
+    "test": "echo \"No tests yet\"",
+    "check:v1": "tsx scripts/check-v1.ts"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -27,6 +28,8 @@
     "@types/cors": "^2.8.17",
     "@types/node": "^20.10.6",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/supertest": "^2.0.16",
+    "supertest": "^6.3.4",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
   }
